[gd_scene load_steps=8 format=3 uid="uid://osne576drmo4"]

[ext_resource type="Script" path="res://character.gd" id="1_33gyh"]
[ext_resource type="Texture2D" uid="uid://bl8ief7cuv5om" path="res://Caracters.PNG" id="1_lgyk4"]

[sub_resource type="Animation" id="Animation_5gvp3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_oegfe"]
resource_name = "dancing"
length = 1.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1e-05, 1e-05, 1e-05, 1e-05, 1e-05, 1e-05),
"update": 0,
"values": [Vector2(1, 1), Vector2(-1, 1), Vector2(1, 1), Vector2(-1, 1), Vector2(1, 1), Vector2(-1, 1)]
}

[sub_resource type="Animation" id="Animation_7utuw"]
resource_name = "intro"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_ujuwb"]
resource_name = "motivation1"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r8jj1"]
_data = {
"RESET": SubResource("Animation_5gvp3"),
"dancing": SubResource("Animation_oegfe"),
"intro": SubResource("Animation_7utuw"),
"motivation1": SubResource("Animation_ujuwb")
}

[node name="Character" type="Node2D"]
script = ExtResource("1_33gyh")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.894118, 0.905882, 0.901961, 1)
texture = ExtResource("1_lgyk4")
hframes = 4
vframes = 3
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r8jj1")
}

[node name="mtoivational1" type="Timer" parent="."]

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="timeout" from="mtoivational1" to="." method="_on_mtoivational_1_timeout"]
